--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -1,5 +1,10 @@
 [config_data]
-website_url = https://websites.co.in/login
-username = testuser07feb@yopmail.com
-password = Testuser@07
+website_url = https://aspx.co.in/login
+username = aspxontest@yopmail.com
+password = Test@1234
 invalid_username = hidufhei@eoidw.com
+
+; website_url = https://websites.co.in/login
+; username = testuser07feb@yopmail.com
+; password = Testuser@07
+; invalid_username = hidufhei@eoidw.com
