Updated city change logic and sorted page loading

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -1,10 +1,14 @@
 [config_data]
 website_url = https://aspx.co.in/login
-username = aspxontest@yopmail.com
-password = Test@1234
+username = testofserver@yopmail.com
+password = Abcd@1234
 invalid_username = hidufhei@eoidw.com
 
 ; website_url = https://websites.co.in/login
 ; username = testuser07feb@yopmail.com
 ; password = Testuser@07
 ; invalid_username = hidufhei@eoidw.com
+
+[CITY]
+city_input = fen
+selected_city = Fengfeng
