Added buy_subscription page

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -1,8 +1,8 @@
 [config_data]
 website_url = https://aspx.co.in/login
-username = testofserver@yopmail.com
-password = Abcd@1234
-invalid_username = hidufhei@eoidw.com
+username = aspxtest123@yopmail.com
+password = Testaspx@1234
+; invalid_username = hidufhei@eoidw.com
 
 ; website_url = https://websites.co.in/login
 ; username = testuser07feb@yopmail.com
