added business card class

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -2,7 +2,7 @@
 website_url = https://aspx.co.in/login
 username = aspxtest123@yopmail.com
 password = Testaspx@1234
-; invalid_username = hidufhei@eoidw.com
+invalid_username = hidufhei@eoidw.com
 
 ; website_url = https://websites.co.in/login
 ; username = testuser07feb@yopmail.com
