added ingore pop-up command

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -1,7 +1,7 @@
 [config_data]
 website_url = https://aspx.co.in/login
-username = aspxtest123@yopmail.com
-password = Testaspx@1234
+username = testaspxlates@yopmail.com
+password = Test@1234
 invalid_username = hidufhei@eoidw.com
 
 ; website_url = https://websites.co.in/login
@@ -10,5 +10,5 @@ invalid_username = hidufhei@eoidw.com
 ; invalid_username = hidufhei@eoidw.com
 
 [CITY]
-city_input = fen
-selected_city = Fengfeng
+city_input = kan
+selected_city = Kanonji
