added ignore offer pop-up and logger test to all cases

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -10,5 +10,5 @@ invalid_username = hidufhei@eoidw.com
 ; invalid_username = hidufhei@eoidw.com
 
 [CITY]
-city_input = kan
-selected_city = Kanonji
+city_input = hue
+selected_city = Huedin
