Added add an update class

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -1,14 +1,14 @@
 [config_data]
-website_url = https://aspx.co.in/login
-username = testaspxlates@yopmail.com
-password = Test@1234
-invalid_username = hidufhei@eoidw.com
-
-; website_url = https://websites.co.in/login
-; username = testuser07feb@yopmail.com
-; password = Testuser@07
+; website_url = https://aspx.co.in/login
+; username = testaspxlates@yopmail.com
+; password = Test@1234
 ; invalid_username = hidufhei@eoidw.com
 
+website_url = https://websites.co.in/login
+username = testuser08feb@yopmail.com
+password = Testuser@08
+invalid_username = hidufhei@eoidw.com
+
 [CITY]
-city_input = hue
-selected_city = Huedin
+city_input = jab
+selected_city = Jabalpur
