Added add_a_product class page

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -9,6 +9,6 @@ username = testuser08feb@yopmail.com
 password = Testuser@08
 invalid_username = hidufhei@eoidw.com
 
-[CITY]
-city_input = jab
-selected_city = Jabalpur
+[city_data]
+city_input = aur
+selected_city = Auraiya
