added allure reports

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -5,10 +5,10 @@
 ; invalid_username = hidufhei@eoidw.com
 
 website_url = https://websites.co.in/login
-username = testuser08feb@yopmail.com
-password = Testuser@08
+username = testuser10march@yopmail.com
+password = Testuser@10
 invalid_username = hidufhei@eoidw.com
 
 [city_data]
-city_input = jab
-selected_city = Jabalpur
+city_input = aur
+selected_city = Auraiya
