--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -1,14 +1,20 @@
 [config_data]
-; website_url = https://aspx.co.in/login
-; username = testaspxlates@yopmail.com
-; password = Test@1234
-; invalid_username = hidufhei@eoidw.com
-
-website_url = https://websites.co.in/login
-username = testuser10march@yopmail.com
-password = Testuser@10
+website_url = https://aspx.co.in/login
+username = newaspxuser@yopmail.com
+password = Test@1234
 invalid_username = hidufhei@eoidw.com
+
+; website_url = https://websites.co.in/login
+; username = testuser10march@yopmail.com
+; password = Testuser@10
+; invalid_username = hidufhei@eoidw.com
 
 [city_data]
 city_input = dal
 selected_city = Dallas
+
+[product_data]
+product_name = ProdOfNextGen
+product_price = 99
+discount_amount = 10
+product_category = AnyCat
