handled product category field with updated code

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -14,7 +14,7 @@ city_input = dal
 selected_city = Dallas
 
 [product_data]
-product_name = ProdOfNextGen
-product_price = 99
+product_name = iPhone
+product_price = 9999
 discount_amount = 10
-product_category = AnyCat
+product_category = CAT123
