included registration flow

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -9,6 +9,14 @@ invalid_username = hidufhei@eoidw.com
 ; password = Testuser@10
 ; invalid_username = hidufhei@eoidw.com
 
+[registration_data]
+home_page_url = https://websites.co.in/
+full_name = "Test User 1234"
+email_address = "TestUser1234@ymail.com"
+phone_no = ""
+new_password =
+
+
 [city_data]
 city_input = dal
 selected_city = Dallas
