added yopmail page

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -11,10 +11,10 @@ invalid_username = hidufhei@eoidw.com
 
 [registration_data]
 home_page_url = https://websites.co.in/
-full_name = "Test User 1234"
-email_address = "TestUser1234@ymail.com"
-phone_no = ""
-new_password =
+full_name = Test User1234
+email_address = TestUser1234@ymail.com
+phone_no = 8877665544
+new_password = Test@1234
 
 
 [city_data]
