--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -12,8 +12,8 @@ invalid_username = hidufhei@eoidw.com
 [registration_data]
 home_page_url = https://websites.co.in/
 full_name = Test User1234
-email_address = TestUser1234@ymail.com
-phone_no = 8877665544
+email_address = Testuse00987@yopmail.com
+phone_no = 7877789765
 new_password = Test@1234
 
 
