modified script and filtered the error

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -12,10 +12,15 @@ invalid_username = hidufhei@eoidw.com
 [registration_data]
 home_page_url = https://websites.co.in/
 full_name = Test User1234
-email_address = Testuse00987@yopmail.com
-phone_no = 7877789765
-new_password = Test@1234
+email_address = Resst65ttyy6@yopmail.com
+country_code = +886
+phone_no = 59869000
+new_password = Testt@1234
 
+new_website_title = thebestofthebest
+city_initials = Agr
+city_name = Agra
+post_code = 79898
 
 [city_data]
 city_input = dal
