completed registartion flow

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -10,11 +10,11 @@ invalid_username = hidufhei@eoidw.com
 ; invalid_username = hidufhei@eoidw.com
 
 [registration_data]
-home_page_url = https://websites.co.in/
+home_page_url = https://aspx.co.in/
 full_name = Test User1234
-email_address = Resst65ttyy6@yopmail.com
-country_code = +886
-phone_no = 59869000
+email_address = testispassed123@yopmail.com
+country_code = +961
+phone_no = 59867789
 new_password = Testt@1234
 
 new_website_title = thebestofthebest
