added random data generators and email storing

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -10,17 +10,18 @@ invalid_username = hidufhei@eoidw.com
 ; invalid_username = hidufhei@eoidw.com
 
 [registration_data]
+; home_page_url = https://websites.co.in/
 home_page_url = https://aspx.co.in/
-full_name = Test User1234
-email_address = testispassed123@yopmail.com
-country_code = +961
-phone_no = 59867789
-new_password = Testt@1234
+full_name = Test User16
+email_address = testuser16april@yopmail.com
+country_code = +973
+phone_no = 5987908
+new_password = Testuser@16
 
-new_website_title = thebestofthebest
+new_website_title = testonsixteenofthemonth
 city_initials = Agr
 city_name = Agra
-post_code = 79898
+post_code = 798687
 
 [city_data]
 city_input = dal
