Updated buy subscription script

--- a/configurations/config.ini
+++ b/configurations/config.ini
@@ -1,7 +1,7 @@
 [config_data]
 website_url = https://aspx.co.in/login
-username = newaspxuser@yopmail.com
-password = Test@1234
+username = harry988@yopmail.com
+password = Testuser@16
 invalid_username = hidufhei@eoidw.com
 
 ; website_url = https://websites.co.in/login
@@ -10,13 +10,13 @@ invalid_username = hidufhei@eoidw.com
 ; invalid_username = hidufhei@eoidw.com
 
 [registration_data]
-; home_page_url = https://websites.co.in/
-home_page_url = https://aspx.co.in/
+home_page_url = https://websites.co.in/
+; home_page_url = https://aspx.co.in/
 full_name = Test User16
 email_address = testuser16april@yopmail.com
-country_code = +973
+country_code = +590
 phone_no = 5987908
-new_password = Testuser@16
+new_password = Testuser@17
 
 new_website_title = testonsixteenofthemonth
 city_initials = Agr
